# Sdl2_GameDevTutorials

./: Sdl2_GameDevTutorial.sln
Lesson01-HelloSdl/: Lesson01-HelloSdl.vcxproj
Lesson02-GettingAnImageOnTheScreen/: Lesson02-GettingAnImageOnTheScreen.vcxproj  drkrWindow.h
Lesson03-EventDrivenProgramming/: Lesson03-EventDrivenProgramming.vcxproj
Lesson04-KeyPress/: Lesson04-KeyPress.vcxproj  main.cpp
Lesson05-SurfaceLoadingAndSoftStretching/: Lesson05-SurfaceLoadingAndSoftStretching.vcxproj
Lesson05-SurfaceLoadingAndSoftStretching/types/: drkrWindow.cpp  drkrWindow.h
Lesson1-HelloSdl/: Lesson1-HelloSdl.vcxproj  Sdl2_x86.props  Sdl_General.props
Lesson2-GettingAnImageOnTheScreen/: Lesson2-GettingAnImageOnTheScreen.vcxproj  Lesson2-GettingAnImageOnTheScreen.vcxproj.filters  drkrWindow.cpp  drkrWindow.h  main.cpp
Lesson3-EventDrivenProgramming/: Lesson3-EventDrivenProgramming.vcxproj  Lesson3-EventDrivenProgramming.vcxproj.filters  main.cpp
Lesson3-EventDrivenProgramming/types/: drkrWindow.cpp  drkrWindow.h
doc/: UsedComponents.txt
props/: Sdl2_x64.props  Sdl_General.props
resources/h/: common.h  consts.h  enums.h  macros.h  tlscallback.h
src/: Sdl2_GameDevTutorial.sln
src/Lesson01-HelloSdl/: Lesson01-HelloSdl.vcxproj  main.cpp
src/Lesson02-GettingAnImageOnTheScreen/: Lesson02-GettingAnImageOnTheScreen.vcxproj
src/Lesson03-EventDrivenProgramming/: Lesson03-EventDrivenProgramming.vcxproj
src/Lesson09-TheViewport/: CMakeLists.txt  Lesson09-TheViewport.vcxproj
src/Lesson09-TheViewport/types/: drkrWindow.cpp
(+53 files in other folders)
